<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />


    <ImageView
        android:layout_marginTop="16dp"
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/title"
        android:src="@drawable/planet_image_01"
        android:contentDescription="@string/planet_image" />

    <TextView
        android:id="@+id/image_view_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_view"
        android:fontFamily="sans-serif-light"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/image_of_planet_saturn"
        android:textAlignment="center"
        android:textSize="13sp" />


    <TextView
        android:id="@+id/sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_view_description"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-light"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/planet_description"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/click_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/start_button"
        android:fontFamily="sans-serif-light"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/click_text"
        android:textAlignment="center"
        android:textSize="15sp" />


    <Button
        android:id="@+id/start_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:onClick="startButton"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/start_quiz"
        android:textSize="16sp" />

</RelativeLayout>